// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic green Lenkelister test 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  />
</div>
`;

exports[`render Lenkelister with fo-links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  >
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/sykefravaer/"
      >
        Ditt sykefravær
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://www-t1.nav.no/no/person/skjemaer-for-privatpersoner"
      >
        Skjemaer
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://foreldrepenger.nav.no"
      >
        Dine foreldrepenger
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/pselv/publisering/dinpensjon.jsf"
      >
        Din pensjon
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/pselv/publisering/uforetrygd.jsf?context=ut"
      >
        Uføretrygd
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/brukerprofil/"
      >
        Din profil
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://www-t1.nav.no/person/personopplysninger"
      >
        Personopplysninger
      </a>
    </div>
  </nav>
</div>
`;

exports[`render Lenkelister with general-links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  >
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://arbeidsplassen.nav.no/stillinger"
      >
        Ledige stillinger
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/pselv/publisering/uforetrygd.jsf?context=ut"
      >
        Uføretrygd
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://foreldrepenger.nav.no"
      >
        Dine foreldrepenger
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/aktivitetsplan/"
      >
        Aktivitetsplan
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/brukerprofil/"
      >
        Din profil
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="http://localhost:9222/veiledearbeidssoker/mistet-jobben/registrering"
      >
        Registrer deg som arbeidssøker
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://stillingsok.nav.no/pam-stillingsok/lagrede-sok"
      >
        Dine stillingssøk
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="https://www-t1.nav.no/person/personopplysninger"
      >
        Personopplysninger
      </a>
    </div>
  </nav>
</div>
`;

exports[`render Lenkelister without links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  />
</div>
`;

exports[`render a couple of links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  >
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="/mininnboks"
      >
        Min innboks
      </a>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <a
        className="lenke relatert-informasjon__link"
        data-ga="Dittnav/Lenkeliste"
        href="/saksoversikt"
      >
        Innsyn og oversikt
      </a>
    </div>
  </nav>
</div>
`;
